# vocaloid-rate

./: .dockerignore  .gitignore  .release-it.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  STRUCTURE.md  STYLEGUIDE.md  alembic.ini  docker-compose.yml  entrypoint.sh  eslint.config.mjs  index.html  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  run.sh  sitemap.xml  vercel.json  vocaloid-rate.spec
.claude/: settings.json
.github/workflows/: ci-cd.yml  deploy-docs.yml  (+2 more)
alembic/: env.py
api/: index.py
app/: auth.py  config.py  constants.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  scraper.py  security.py  vocadb.py
docs/: docusaurus.config.ts  package-lock.json  package.json
locales/: js_translations.json  messages.pot
scripts/: bot_daily_top.py  extract_js_messages.py  generate_db_docs.py  generate_readme_docs.py  manage_users.py  update_docs.py
tests/: conftest.py  test_app_behavior.py  test_auth_api.py  test_auth_api_more.py  test_auth_logic.py  test_config_and_module_setup.py  test_crud_even_more.py  test_crud_logic.py  test_crud_more.py  test_dependencies.py  test_dependencies_more.py  test_main.py  test_main_lifespan.py  test_pages.py  test_pages_edge.py  test_pages_more.py  test_playlists_api.py  test_playlists_api_more.py  test_profile.py  test_scraping.py  test_seo.py  test_services_scraping.py  test_tracks_api.py  test_tracks_api_more.py  test_vocadb_api.py  test_vocadb_module.py  test_vocadb_router_even_more.py  test_vocadb_router_more.py
(+535 files in other folders)
