[project]
name = "vocaloid-rate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "babel>=2.17.0",
    "beautifulsoup4>=4",
    "fastapi>=0.127.1",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "pydantic>=2",
    "python-multipart>=0.0.21",
    "requests>=2",
    "sqlalchemy>=2",
    "uvicorn>=0.40.0",
]
