[project]
name = "vocaloid-rate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "babel>=2.17.0",
    "beautifulsoup4>=4",
    "fastapi>=0.100.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2",
    "sqlalchemy>=2",
    "uvicorn>=0.40.0",
]
